--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<section class="privacy-policy container-fluid my-5">
+<section class="privacy-policy container my-5">
     <h1 class="mb-4 text-primary">@ViewData["Title"]</h1>
 
     <p>Welcome to our Library System! We respect your privacy and are committed to protecting your personal information while you enjoy exploring and borrowing books online.</p>
