--- a/Views/Users/GetUserBorrowBooks.cshtml
+++ b/Views/Users/GetUserBorrowBooks.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LibrarySystem.Models.UserInformationViewModel
 
-<div class="container-fluid my-5">
+<div class="container my-5">
 	@if (Model?.BorrowedBooks == null || !Model.BorrowedBooks.Any())
 	{
 		<h1 class="mb-4 text-primary">No borrowed books found.</h1>
